# zarrs_tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: benchmark_read_all.csv  benchmark_read_all.md  benchmark_read_chunks.csv  benchmark_read_chunks.md  benchmark_roundtrip.csv  benchmark_roundtrip.md  benchmarks.md  convert_binary.md  convert_netcdf.md  filter.md  ome.md  ome_zarr.md  reencode_rechunk.md  zarrs_binary2zarr.md  zarrs_filter.md  zarrs_info.md  zarrs_ncvar2zarr.md  zarrs_ome.md  zarrs_reencode.md  zarrs_validate.md
docs/guided_filter/: guided_filter6.md  guided_filter6.tex
scripts/: _run_benchmark.py  generate_benchmark_array.py  plot_benchmarks.py  requirements.txt  run_benchmark_read_all.py  run_benchmark_read_chunks.py  run_benchmark_roundtrip.py  tensorstore_benchmark_read.py  tensorstore_benchmark_read_async.py  tensorstore_python_benchmark_read_async.py  tensorstore_python_benchmark_roundtrip.py  test_reencode.sh  zarr_python_benchmark_read_async.py  zarr_python_benchmark_roundtrip.py
src/: filter.rs  info.rs  lib.rs  progress.rs
src/filter/: array_subset_overlap.rs  chunk_cache.rs  filter_arguments.rs  filter_command.rs  filter_common_arguments.rs  filter_error.rs  filter_input_output_arguments.rs  filter_traits.rs  kernel.rs  path_or_identifier.rs  path_or_temp_path.rs  progress.rs
src/filter/filters/: clamp.rs  crop.rs  downsample.rs  equal.rs  gaussian.rs  gradient_magnitude.rs  guided_filter.rs  reencode.rs  replace_value.rs  rescale.rs  summed_area_table.rs
src/info/: histogram.rs  range.rs
