[package]
name = "zarrs_tools"
version = "0.3.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.71"
description = "Tools for creating and manipulating Zarr V3 data"
documentation = "https://docs.rs/zarrs_tools"
repository = "https://github.com/LDeakin/zarrs_tools"
license = "MIT OR Apache-2.0"
keywords = ["zarr"]
categories = ["command-line-utilities", "encoding"]

[features]
ncvar2zarr = ["dep:netcdf"]

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.29"
indicatif = { version = "0.17.7", features = ["rayon"] }
netcdf = { version = "0.9.0", optional = true, features = ["static"] }
object_store = { version = "0.9.0", features = ["http"] }
rayon = "1.8.0"
rayon_iter_concurrent_limit = "0.1.0"
serde_json = "1.0.107"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
zarrs = { version = "0.12", features = ["async", "object_store", "opendal"] }

[[bin]]
name = "zarrs_ncvar2zarr"
required-features = ["ncvar2zarr"]

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.9.0"
ci = ["github"]
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
all-features = true
create-release = false

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
x86_64-apple-darwin = "macos-12"

# [patch.crates-io]
# zarrs = { path = "../zarrs" }
# zarrs = { git = "https://github.com/LDeakin/zarrs.git" }

# [profile.release]
# debug = 1
