[package]
name = "zarrs_tools"
version = "0.5.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "Tools for creating and manipulating Zarr V3 data"
documentation = "https://docs.rs/zarrs_tools"
repository = "https://github.com/LDeakin/zarrs_tools"
license = "MIT OR Apache-2.0"
keywords = ["zarr"]
categories = ["command-line-utilities", "encoding"]

[features]
async = ["zarrs/async", "zarrs/object_store", "dep:object_store"]
benchmark = []
binary2zarr = []
filter = []
info = []
ncvar2zarr = ["dep:netcdf"]
ome = []

[dependencies]
approx = "0.5.1"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
bytemuck = "1.16.0"
clap = { version = "4.4.6", features = ["derive"] }
enum_dispatch = "0.3.12"
futures = "0.3.29"
half = { version = "2.4.0", features = ["num-traits"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.13.0"
ndarray = { version = "0.15.6", features = ["rayon", "approx-0_5"] }
netcdf = { version = "0.9.0", optional = true, features = ["static"] }
num-traits = "0.2.18"
object_store = { version = "0.10.1", optional = true }
# opendal = { version = "0.47", default-features = false, features = ["services-fs"] }
rayon = "1.10.0"
rayon_iter_concurrent_limit = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.107"
sysinfo = "0.30.6"
tempfile = "3.10.1"
thiserror = "1.0.57"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
zarrs = { version = "0.15.0-beta.1", features = [] }

[[bin]]
name = "zarrs_benchmark_read_sync"
required-features = ["benchmark"]

[[bin]]
name = "zarrs_benchmark_read_async"
required-features = ["async", "benchmark"]

[[bin]]
name = "zarrs_binary2zarr"
required-features = ["binary2zarr"]

[[bin]]
name = "zarrs_filter"
required-features = ["filter"]

[[bin]]
name = "zarrs_info"
required-features = ["info"]

[[bin]]
name = "zarrs_ncvar2zarr"
required-features = ["ncvar2zarr"]

[[bin]]
name = "zarrs_ome"
required-features = ["ome"]

[[bin]]
name = "zarrs_reencode"
required-features = []

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true
# lto = true
# codegen-units = 1
# panic = "abort"
# debug = true

# [workspace.metadata.dist]
# cargo-dist-version = "0.10.0"
# ci = ["github"]
# installers = []
# targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# pr-run-mode = "plan"
# all-features = false
# create-release = false

# [workspace.metadata.dist.github-custom-runners]
# aarch64-apple-darwin = "macos-14"
# x86_64-apple-darwin = "macos-12"

# [patch.crates-io]
# zarrs = { path = "../zarrs" }
# zarrs = { git = "https://github.com/LDeakin/zarrs.git" }
